--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,1 @@
-.cargo/
-*.pdb
-**/*.rs.bk
-debug/
-target/
-vendor/
-vendor.tar
-debian/*
-!debian/changelog
-!debian/control
-!debian/copyright
-!debian/install
-!debian/rules
-!debian/source
+/target
