Refactor tool system and implement pan and zoom tools
- Removed the old Tool enum and replaced it with a trait-based system for tools.
- Introduced ToolHandle for managing tool instances.
- Implemented PanTool with mouse movement handling for panning the view.
- Implemented ZoomTool with wheel event handling for zooming in and out.
- Updated SphereCanvas to support new tool messages and state management.
- Refactored SphereCanvasState to include mouse interaction states.
- Enhanced SphereCanvasPipeline for rendering with updated state management.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ iced_aw = { version = "0.12" }
 rfd = "0.15"
 bytemuck = "1.23"
 image = "0.25"
+
+[patch.crates-io]
+iced = { path = "../iced" }
+iced_aw = { path = "../iced_aw" }
